--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@
     --font-secondary:"Josefin Slab", serif;
     --font-action:"Mulish", serif;
 }
+
+html{
+    scroll-behavior: smooth;
+}
+
 /*formatação do menu hamburguer*/
 .hamburguer{
     width: 2rem;
@@ -179,6 +184,7 @@ header{
     top: 0; 
     right: -20rem;
     transition: all 1s;
+    z-index: 150;
 }
 .show-menu .sidebar{
     right: 0;
@@ -582,3 +588,56 @@ header{
         cursor: pointer;
         grid-column: 2;
     }
+
+    /*Formatação do nosso footer(roda pé)*/
+
+    footer{
+        width: 100%;
+        height: 7rem;
+        background-color: #17181b;
+        display: flex;
+        justify-content: center;
+        align-items: center; 
+    }
+
+    .footer-content{
+        width: 60%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .footer-content p{
+        font-family: var(--font-secondary);
+        color: #a7a7a7;
+        font-size: 1rem;
+    }
+
+    .social-list a{
+        margin: 0 2rem;
+        color: #a7a7a7;
+        font-size: 1.3rem;
+    }
+
+    .social-list ul{
+        display: flex;
+    }
+
+    /*Formatando o Span*/
+
+        #link-topo{
+            position: fixed;
+            right: 3rem;
+            bottom: 3rem;
+            width: 3rem;
+            height: 3rem;
+            background: #7F00FF;  
+            background: -webkit-linear-gradient(to right, #E100FF, #7F00FF); 
+            background: linear-gradient(to right, #E100FF, #7F00FF); 
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: #fff;
+            border-radius: .3rem;
+            box-shadow: 0 0.1rem 0.6rem #00000009;
+
+        }
